syntax = "proto3";

option java_multiple_files = true;
option java_package = "example.costCollegeDaoFour.grpc";
option java_outer_classname = "MongoProto";

package mongodb;

message CostCollegeDaoFourRequest {
    string type = 1;
    string length = 2;
}

message CostCollegeDaoFourResponse {
    string message = 1;
}

service DaoFour {
	rpc getQueryFour(CostCollegeDaoFourRequest) returns (CostCollegeDaoFourResponse);
}